# TomoImageStitcher

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml  publish-pypi.yml  tests.yml
docs/: api.md  architecture.md  index.md  installation.md  quickstart.md  troubleshooting.md
examples/: README.md  example_2d_projection.py  example_with_rotation.py
examples/data/: README.md
notebooks/: 01_quickstart.ipynb  02_full_pipeline.ipynb  02_full_pipeline_batch_1_EL.ipynb  03_stitching_with_rotation.ipynb  README.md
scripts/: README.md  make_release.sh  run_tests.sh
src/stitcher/: __init__.py  danmax.py  registration.py  stitcher.py  transform.py
src/tomo_image_stitcher/: __init__.py  danmax.py  py.typed  registration.py  stitcher.py  transform.py
tests/: __init__.py  test_stitcher.py  test_transform.py  test_utilities.py
